--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://notes.dhruvang.com",
   "dependencies": {
     "@headlessui/react": "^1.6.3",
     "@testing-library/jest-dom": "^5.16.3",
